--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,5 @@
 
     <string name="app_name">PyConIndiaAndroid</string>
     <string name="audi">AUDI</string>
+    <string name="submit_feedback">Submit Feedback</string>
 </resources>
