details activity title fix

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="give_feedback">Give Feedback</string>
     <string name="comments">Comments</string>
     <string name="credits_title">Credits</string>
+    <string name="details_ctivity_title">Details</string>
     <string name="credits"><i>Developer: </i>
        Abhishek Banerjee
        \n<i>Backend: </i>
